--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -112,3 +112,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/CinematicCamera.CineCameraSettings]
+DefaultCropPresetName=1.77 (16:9)
+
